# chatRoom

./: CMakeLists.txt  README.md  main.cpp  make.sh
example/: CMakeLists.txt
example/mysqlServer/: CMakeLists.txt  main.cpp  mysql.proto
example/normalServer/: CMakeLists.txt  main.cpp
example/normalServer/controller/include/: loginController.hpp  tokenInterceptor.hpp
example/normalServer/controller/src/: loginController.cpp  tokenInterceptor.cpp
example/normalServer/entity/include/: chatMessage.hpp  mysql.pb.h  roomUser.hpp  rooms.hpp  rpcEntiry.hpp  user.hpp
example/normalServer/entity/src/: chatMessage.cpp  mysql.pb.cc  rpcEntiry.cpp  user.cpp
example/normalServer/service/include/: chatMessageService.hpp  roomService.hpp  userService.hpp
example/normalServer/service/src/: chatMessageService.cpp  roomService.cpp  userService.cpp
example/normalServer/util/include/: codes.hpp  message.hpp  stringUtil.hpp  tokenUtil.hpp  websocketUtil.hpp
example/normalServer/util/src/: stringUtil.cpp  tokenUtil.cpp  websocketUtil.cpp
example/normalServer/websocket/include/: chatWebsocket.hpp  roomsWebsocket.hpp
example/normalServer/websocket/src/: chatWebsocket.cpp  roomsWebsocket.cpp
example/resource/: index.html
example/resourceServer/: CMakeLists.txt  main.cpp  resource.proto
include/http/: HttpServer.hpp  Request.hpp  Response.hpp  WebSocket.hpp  WebSocketIo.hpp
include/mysql/: MySql.hpp  MySqlConn.hpp  MySqlPool.hpp
include/net/: Acceptor.hpp  Buffer.hpp  Callbacks.hpp  Channel.hpp  Connector.hpp  CurrentThread.hpp  EventLoop.hpp  (+16 more)
src/: CMakeLists.txt
(+77 files in other folders)
